# PathPlanningProject

Examples/: example_log.xml
Src/: CMakeLists.txt  closed.cpp  closed.h  map.cpp  map.h  mission.cpp  node.cpp  node.h  open.cpp  open.h  search.cpp  search.h  xmllogger.cpp
TestData/: 0_test_log.xml  1_test_log.xml  2_test.xml  2_test_log.xml
